--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
   <meta content="" name="description">
 
   <!-- Favicons -->
-  <link href="img/favicon.png" rel="icon">
-  <link href="img/apple-touch-icon.png" rel="apple-touch-icon">
+  <link href="img/logo-koperasi.png" rel="icon">
+  <link href="img/logo-koperasi.png" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,400i,600,700|Raleway:300,400,400i,500,500i,700,800,900" rel="stylesheet">
@@ -77,10 +77,13 @@
                     <a class="page-scroll" href="#services">Services</a>
                   </li>
                   <li>
-                    <a class="page-scroll" href="#portfolio">Portofolio</a>
+                    <a class="page-scroll" href="#portfolio">Gallery</a>
                   </li>
                   <li>
                     <a class="page-scroll" href="#contact">Contact</a>
+                  </li>
+                  <li>
+                    <a class="page-scroll" href="#daftar">Daftar</a>
                   </li>
                 </ul>
               </div>
@@ -382,14 +385,14 @@
                 <div class="panel-heading">
                   <h4 class="check-title">
 											<a data-toggle="collapse" class="active" data-parent="#accordion" href="#check1">
-                                                <span class="acc-icons"></span>Consectetur adipisicing elit.
+                                                <span class="acc-icons"></span>Simpanan Yang Menguntungkan
 											</a>
 										</h4>
                 </div>
                 <div id="check1" class="panel-collapse collapse in">
                   <div class="panel-body">
                     <p>
-                      Redug Lefes dolor sit amet, consectetur adipisicing elit. Aspernatur, tempore, commodi quas mollitia dolore magnam quidem repellat, culpa voluptates laboriosam maiores alias accusamus recusandae vero
+                      Kami memberikan jasa simpanan 10% per tahun, yang dibayarkan setiap bulan.
                     </p>
                   </div>
                 </div>
@@ -400,14 +403,14 @@
                 <div class="panel-heading">
                   <h4 class="check-title">
 											<a data-toggle="collapse" data-parent="#accordion" href="#check2">
-                                                <span class="acc-icons"></span> Dolore magnam quidem repellat.
+                                                <span class="acc-icons"></span> Pinjaman Untuk Anggota
 											</a>
 										</h4>
                 </div>
                 <div id="check2" class="panel-collapse collapse">
                   <div class="panel-body">
                     <p>
-                      Redug Lefes dolor sit amet, consectetur adipisicing elit. Aspernatur, tempore, commodi quas mollitia dolore magnam quidem repellat, culpa voluptates laboriosam maiores alias accusamus recusandae vero aperiam sint nulla beatae eos.
+                      Pinjaman yang mudah dan terpercaya hanya untuk anggota Koperasi.
                     </p>
                   </div>
                 </div>
@@ -418,14 +421,14 @@
                 <div class="panel-heading">
                   <h4 class="check-title">
 											<a data-toggle="collapse" data-parent="#accordion" href="#check3">
-                                                <span class="acc-icons"></span>Redug Lefes dolor sit.
+                                                <span class="acc-icons"></span>Berfokus Pada Kepentingan Anggota
 											</a>
 										</h4>
                 </div>
                 <div id="check3" class="panel-collapse collapse ">
                   <div class="panel-body">
                     <p>
-                      Redug Lefes dolor sit amet, consectetur adipisicing elit. Aspernatur, tempore, commodi quas mollitia dolore magnam quidem repellat, culpa voluptates laboriosam maiores alias accusamus recusandae vero aperiam sint nulla beatae eos.
+                      KSP Makmur menyediakan layanan dan produk Simpanan dan Pinjaman untuk memenuhi kebutuhan anggota.
                     </p>
                   </div>
                 </div>
@@ -436,14 +439,14 @@
                 <div class="panel-heading">
                   <h4 class="check-title">
 											<a data-toggle="collapse" data-parent="#accordion" href="#check4">
-                                                <span class="acc-icons"></span>Maiores alias accusamus
+                                                <span class="acc-icons"></span>Aman Dan Terkendali
 											</a>
 										</h4>
                 </div>
                 <div id="check4" class="panel-collapse collapse">
                   <div class="panel-body">
                     <p>
-                      Redug Lefes dolor sit amet, consectetur adipisicing elit. Aspernatur, tempore, commodi quas mollitia dolore magnam quidem repellat, culpa voluptates laboriosam maiores alias accusamus recusandae vero aperiam sint nulla beatae eos.
+                      KSP Makmur dibawah pengawasan Kementrian Koperasi dan Usaha Kecil dan Menengah Republik Indonesia, dan sudah mendapatkan pengesahan Badan Hukum sejak 2017.
                     </p>
                   </div>
                 </div>
@@ -559,7 +562,7 @@
       <div class="row">
         <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
           <div class="section-headline text-center">
-            <h2>Our Portfolio</h2>
+            <h2>Gallery</h2>
           </div>
         </div>
       </div>
@@ -694,7 +697,7 @@
   </div>
   <!-- awesome-portfolio end -->
   <!-- start pricing area -->
-  <div id="pricing" class="pricing-area area-padding">
+  <div id="daftar" class="area-padding">
     <div class="container">
       <div class="row">
         <div class="col-md-12 col-sm-12 col-xs-12">
@@ -810,7 +813,7 @@
         <div class="col-lg-12 col-md-12 col-sm-12 col-xs=12">
           <div class="suscribe-text text-center">
             <h3>Segera daftarkan diri untuk menikmati manfaat seperti mereka</h3>
-            <a class="sus-btn" href="#portfolio">Daftar</a>
+            <a class="sus-btn" href="#daftar">Daftar</a>
           </div>
         </div>
       </div>
