--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
   <link href="css/nivo-slider-theme.css" rel="stylesheet">
 
   <!-- Main Stylesheet File -->
-  <link href="css/style.css" rel="stylesheet">
+  <link href="css/style_landingpage.css" rel="stylesheet">
 
   <!-- Responsive Stylesheet File -->
   <link href="css/responsive.css" rel="stylesheet">
@@ -698,64 +698,6 @@
   </div>
   <!-- awesome-portfolio end -->
   <!-- start pricing area -->
-  <div id="daftar" class="area-padding">
-    <div class="container">
-      <div class="row">
-        <div class="col-md-12 col-sm-12 col-xs-12">
-          <div class="section-headline text-center">
-            <h2>Daftar Keanggotaan</h2>
-          </div>
-        </div>
-      </div>
-      <div class="row">
-        
-        <div class="col-md-6 col-sm-6 col-xs-12">
-          <div class="pri_table_list active">
-            <span class="saleon">daftar</span>
-            <h3>online</h3>
-            <ol>
-              <li class="check"><b>Daftar Online</b>
-                                    <br>Daftar Online melalui website</li>
-              <li class="check"><b>Registrasi</b>
-                                  <br>Kirim data registrasi</li>
-              <li class="check"><b>Pilih</b>
-                                  <br>Pilih produk simpanan, jumlah, dan jangka waktu</li>
-              <li class="check"><b>Setujui</b>
-                                  <br>Setujui syarat dan ketentuan yang berlaku</li>
-              <li class="check"><b>Top Up</b>
-                                  <br>Top Up simpanan berjangka secara online, dan nikmati manfaatnya</li>
-            </ol>
-            <a class="ready1-btn right1-btn page-scroll" href="#contact">Daftar Sekarang</a>
-            <br>
-            <br>
-            <br>
-          </div>
-        </div>
-        <div class="col-md-6 col-sm-6 col-xs-12">
-          <div class="pri_table_list active">
-            <span class="saleon">daftar</span>
-            <h3>offline</h3>
-            <ol>
-              <li class="check"><b>Daftar Offline</b>
-                                    <br>Datang langsung ke kantor Koperasi Simpan Pinjam</li>
-              <li class="check"><b>Registrasi</b>
-                                  <br>Staff kami akan membantu Anda mengisi data registrasi diri yang dibutuhkan</li>
-              <li class="check"><b>Pilih</b>
-                                  <br>Pilih produk simpanan, jumlah, dan jangka waktu</li>
-              <li class="check"><b>Setujui</b>
-                                  <br>Setujui syarat dan ketentuan yang berlaku</li>
-              <li class="check"><b>Top Up</b>
-                                  <br>Top Up simpanan berjangka secara online, dan nikmati manfaatnya</li>
-            </ol>
-            <a class="ready1-btn right1-btn page-scroll" href="#contact">Hubungi Kami</a>
-            <br>
-            <br>
-            <br>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
   <!-- End pricing table area -->
   <!-- Start Testimonials -->
   <div class="testimonials-area">
