--- a/login.html
+++ b/login.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>Login Form Design</title>
-    <link rel="stylesheet" type="text/css" href="style/style.css" />
+    <link rel="stylesheet" type="text/css" href="css/style_login.css" />
   </head>
   <body>
     <section class="anjay">
