--- a/login.html
+++ b/login.html
@@ -22,7 +22,7 @@
             placeholder="Masukin password"
           />
           <input type="submit" name="submit" value="Login" />
-          <a href="#">Lupa Password</a>
+          <!-- <a href="#">Lupa Password</a> -->
         </form>
       </div>
       -->
